# pretix-ivs-plugin

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: buildECR.yml  style.yml  tests.yml
pretix_ivs_plugin/: __init__.py  apps.py  forms.py  setup.py  signals.py  urls.py  views.py
pretix_ivs_plugin/locale/ar/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/cs/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/cy/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/de_Informal/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/en/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/es/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/fr/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/he/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/hr/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/ko/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/lt/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/lv/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/nb_NO/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/pl/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/pt/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/pt_BR/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/ro/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/ru/LC_MESSAGES/: django.po
pretix_ivs_plugin/locale/sk/LC_MESSAGES/: django.po
pretix_ivs_plugin/static/pretix_ivs_plugin/: ivs.css
pretix_ivs_plugin/templates/pretix_ivs_plugin/: iframe_player.html  order_info.html  settings.html
(+4 files in other folders)
